--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
 
 	listen 80;
+        listen [::]:80;
+
+        access_log /var/log/nginx/reverse-access.log;
+        error_log /var/log/nginx/reverse-error.log;
 
 	location / {
 
