--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   proxy:
-    image: proxynginx # this will use the latest version of 1.11.x
+    image: proxynginx 
     ports:
       - '80:80' # expose 80 on host and sent to 80 in container
     volumes:
